Prevent complete overlap of words (incomplete)
sexual in asexual also can be an answer.
"Show Answer" may show subset as an answer.
Need to rebuild GridGenerator.solve().
store locations in Grid as answers.
Judging answer logic need to be fixed as well.

--- a/50_Wordsearch/program/css/wordsearch.css
+++ b/50_Wordsearch/program/css/wordsearch.css
@@ -138,6 +138,7 @@ button::-moz-focus-inner {
 
     #grid .puzzleSquare {
         font-size: 0.9rem;
+        width: 18px;
     }
 
 }
